[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "safe-ai-util-mcp"
version = "0.0.0"
description = "MCP stdio server exposing safe-ai-util operations as tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
]

[project.scripts]
safe-ai-util-mcp = "safe_ai_util_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
